<resources>
    <string name="app_name">Project\nApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="homepage">Homepage</string>
    <string name="log_out">Log Out</string>
    <string name="Order" />
    <string name="order">Order</string>
    <string name="menu">Menu</string>
    <string name="more_information">More Information</string>
    <string name="logo">Logo</string>
    <string name="sides">Sides</string>
    <string name="drinks">Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="mains">Mains</string>
    <string name="starters">Starters</string>
    <string name="address">Address:</string>
    <string name="contact_no">Contact No:</string>
    <string name="e_mail_address">E-mail Address:</string>
    <string name="address_information">*Address information*</string>
    <string name="contact_information">*Contact information*</string>
    <string name="email_information">*Email information*</string>
    <string name="contact_details">Contact Details</string>
    <string name="allergies_tolerances">Allergies/Tolerances</string>
    <string name="nut_free">Nut Free:</string>
    <string name="fish_free">Fish Free:</string>
    <string name="meat_free">Meat Free:</string>
    <string name="gluten_free">Gluten Free:</string>
    <string name="lactose_intolerant">Lactose Intolerant:</string>
    <string name="tables">Tables</string>
</resources>
