<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010818"
    android:backgroundTint="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MoreActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:layout_marginStart="25dp"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:text="@string/contact_details"
            android:textColor="#ffffff"
            android:textSize="28sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:text="@string/address" />
    <TextView
        android:id="@+id/addressInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/address_information" />

    <TextView
        android:id="@+id/contactText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/contact_no" />

    <TextView
        android:id="@+id/contactInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/contact_information" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/e_mail_address"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/emailInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:text="@string/email_information" />


</LinearLayout>