<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010818"
    android:backgroundTint="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <RelativeLayout
        android:layout_marginTop="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="120dp"
            android:layout_marginStart="25dp"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/logo" />

        <TextView
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="100dp"
            android:text="@string/menu"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menuItemTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:text="@string/starters" />
            <TextView
                android:id="@+id/menuItemTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/mains" />
            <TextView
                android:id="@+id/menuItemTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/desserts"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/menuItemTitle4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/drinks" />
            <TextView
                android:id="@+id/menuItemTitle5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/sides" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>